--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,7 @@ body {
   padding: 0;
   width: 100%;
   /* background-image: url("https://i.pinimg.com/originals/19/39/bf/1939bfa036f576c8168edfd9c35fac70.jpg"); */
-  background-size: cover;
-  /* background-image: linear-gradient(to right, rgb(175, 51, 51) , plum); */
+    background-image: linear-gradient(to right, rgb(243, 146, 146) , rgb(131, 39, 39));
   
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
@@ -12,6 +11,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
 
+}
+
+.form-signin{
+  text-align: center;
+  color: beige;
+  background-color: #670f26;
+  width: 550px;
+  height: 400px;
 }
 
 code {
@@ -24,6 +31,8 @@ code {
   margin: 10px;
   width: 345px;
   color: maroon;
+  background-image: url("https://i.pinimg.com/originals/19/39/bf/1939bfa036f576c8168edfd9c35fac70.jpg"); 
+
 
 }
 
@@ -32,6 +41,7 @@ code {
   background-color: rgb(126, 38, 79);
   position: relative;
   color: black;
+
 }
 
 
